new design for the panel

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,7 +1,24 @@
 <div class="background">
-  <my-todo></my-todo>
-  <!--<my-time></my-time>-->
+  <img src="../img/00{{ num }}.jpg" alt="Picture" />
+<div class="diary-panel">
+  <div class="top-panel">
+    <span>Weather</span>
+    <span>Music</span>
+  </div>
+  <my-time></my-time>
+  <div class="task">
+    <form>
+      <input class="new-task" name="task" value="New Task"/>
+      <input class="submit" type="submit" value="+" />
+    </form>
+  </div>
+  <div class="bottom-panel">
+    <span>Setting</span>
+    <span>Todo</span>
+    <!--<my-todo></my-todo>-->
+  </div>
   <!--<my-playlist></my-playlist>-->
   <!--<my-weather></my-weather>-->
   <!--<my-settings></my-settings>-->
+</div>
 </div>
