--- a/app/app.component.css
+++ b/app/app.component.css
@@ -1,9 +1,66 @@
 .background {
-  padding: 20rem;
-
+  width: 1600px;
+  min-width: 600px;
+  height: 100%;
+  /*display: block;*/
+  z-index: -1;
+  margin: 0 auto;
+  border: none;
+  display: flex;
+}
+.diary-panel {
+  width: 540px;
+  height: 200px;
+  background: aliceblue;
+  opacity: 0.7;
+  position: absolute;
+  top: 50%;
+  left: 25%;
+  /*padding: 10px;*/
+  border-radius: 10px;
+  /*width: 100%;*/
+  /*height: 100%;*/
+  /*position: fixed;*/
+  /*top: 0;*/
+  /*left: 0;*/
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-between;
+  overflow: auto;
+}
+.diary-panel > div > span {
   width: 100%;
   height: 100%;
-  background-image: url(../img/nature13.jpg);
+  text-align: center;
+
+  border: 1px dotted black;
+}
+.top-panel {
+  display: flex;
+  justify-content: space-around;
+
+}
+my-time {
+  align-self: center;
+  flex-grow: 1;
+}
+.task {
+  width: 540px;
+  /*flex-grow: 1;*/
+}
+.task > form {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+}
+.new-task {
+  height: 40px;
+  flex-grow: 1;
+}
+.bottom-panel {
+  display: flex;
+  justify-content: space-around;
 }
 my-todo {
   position: absolute;
@@ -11,4 +68,12 @@ my-todo {
   background-color: #336699;
   right: 0px;
   bottom: 0px;
+}
+my-time {
+  /*position: absolute;*/
+  /*display: inline-block;*/
+  /*color: red;*/
+  /*background-color: #336699;*/
+  /*right: 0px;*/
+  /*top: 0px;*/
 }
