parse  playlist from freemusicarchive.org

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,24 +1,36 @@
-<div class="background">
-  <img src="../img/00{{ num }}.jpg" alt="Picture" />
-<div class="diary-panel">
-  <div class="top-panel">
-    <span>Weather</span>
-    <span>Music</span>
+<div class="background" [ngStyle]="{'background': numImg}">
+  <div class="block">
+    <div class="hide-panel" [hidden]="!openedWeather">
+      <div class="weather"></div>
+    </div>
+    <div class="hide-panel" [hidden]="!openedMusic">
+      <my-music class="music"></my-music>
+    </div>
   </div>
-  <my-time></my-time>
-  <div class="task">
-    <form>
-      <input class="new-task" name="task" value="New Task"/>
-      <input class="submit" type="submit" value="+" />
-    </form>
+  <div class="diary-panel">
+    <div class="top-panel">
+      <button (click)="openedWeather = !openedWeather">Weather</button>
+      <button (click)="openedMusic = !openedMusic">Music</button>
+    </div>
+    <my-time></my-time>
+    <span class="focus-task">{{focusTask}}</span>
+    <div class="task">
+      <section>
+        <input class="new-task" [(ngModel)]="taskValue" (keypress)="addItemKey($event)"/>
+        <button (click)="addItem()" class="submit">+</button>
+      </section>
+    </div>
+    <div class="bottom-panel">
+      <button (click)="openedSetting = !openedSetting">Setting</button>
+      <button (click)="openedTodo = !openedTodo">Todo</button>
+    </div>
   </div>
-  <div class="bottom-panel">
-    <span>Setting</span>
-    <span>Todo</span>
-    <!--<my-todo></my-todo>-->
+  <div class="block">
+    <div class="hide-panel" [hidden]="!openedSetting">
+      <div class="setting"></div>
+    </div>
+    <div class="hide-panel" [hidden]="!openedTodo">
+      <my-todo class="todo"  [itemDetection]="itemDetection" (chooseFocusTask)="chooseFocus($event)"></my-todo>
+    </div>
   </div>
-  <!--<my-playlist></my-playlist>-->
-  <!--<my-weather></my-weather>-->
-  <!--<my-settings></my-settings>-->
-</div>
 </div>
