--- a/app/app.component.css
+++ b/app/app.component.css
@@ -1,21 +1,45 @@
 .background {
   width: 1600px;
-  min-width: 600px;
-  height: 100%;
-  /*display: block;*/
-  z-index: -1;
+  width: 100%;
+  min-width: 400px;
+  height: 1000px;
+  /*!*display: block;*!*/
+  /*z-index: -1;*/
   margin: 0 auto;
-  border: none;
+  /*border: none;*/
+  display: flex;
+  /*align-items: stretch;*/
+  flex-flow: column nowrap;
+  /*vertical-align: middle;*/
+  /*display: table-cell;*/
+}
+/*.background img {*/
+  /*width: 100%;*/
+  /*height: 100%;*/
+/*}*/
+.block {
+  height: 45%;
+  /*flex-grow: 1;*/
   display: flex;
 }
+.hide-panel {
+  width: 50%;
+  /*flex-grow: 1;*/
+  /*border: 2px dotted red;*/
+  padding: 20px;
+}
 .diary-panel {
+  z-index: 1;
   width: 540px;
-  height: 200px;
+  height: 240px;
   background: aliceblue;
   opacity: 0.7;
-  position: absolute;
-  top: 50%;
-  left: 25%;
+  /*position: absolute;*/
+  /*top: 50%;*/
+  /*left: 25%;*/
+  margin: auto;
+  vertical-align: middle;
+
   /*padding: 10px;*/
   border-radius: 10px;
   /*width: 100%;*/
@@ -26,7 +50,7 @@
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-between;
-  overflow: auto;
+
 }
 .diary-panel > div > span {
   width: 100%;
@@ -40,34 +64,70 @@
   justify-content: space-around;
 
 }
+.diary-panel button {
+  width: 100%;
+  /*border-radius: 10px;*/
+}
+.weather {
+  background-color: aliceblue;
+  opacity: 0.7;
+  width: 100%;
+  height: 100%;
+}
+.music {
+  background-color: aliceblue;
+  opacity: 0.7;
+  width: 100%;
+  height: 100%;
+}
+.setting {
+  background-color: aliceblue;
+  opacity: 0.7;
+  width: 100%;
+  height: 100%;
+}
+.todo {
+  background-color: aliceblue;
+  opacity: 0.7;
+  width: 100%;
+  height: 100%;
+}
 my-time {
   align-self: center;
   flex-grow: 1;
+}
+.focus-task {
+  text-align: center;
+  text-shadow: 5px 4px 3px #999;
+  font-size: 150%;
 }
 .task {
   width: 540px;
   /*flex-grow: 1;*/
 }
-.task > form {
+.task > section {
   width: 100%;
   display: flex;
-  justify-content: space-between;
-  align-items: stretch;
+  /*justify-content: space-between;*/
+  /*align-items: stretch;*/
 }
 .new-task {
   height: 40px;
   flex-grow: 1;
+}
+.task > section > button {
+  width: 40px;
 }
 .bottom-panel {
   display: flex;
   justify-content: space-around;
 }
 my-todo {
-  position: absolute;
+  /*position: absolute;*/
   display: inline-block;
-  background-color: #336699;
-  right: 0px;
-  bottom: 0px;
+  /*background-color: #336699;*/
+  /*right: 0px;*/
+  /*bottom: 0px;*/
 }
 my-time {
   /*position: absolute;*/
