--- a/app/todo/todo.copmponent.css
+++ b/app/todo/todo.copmponent.css
@@ -2,13 +2,19 @@
   color: red;
 }
 
-.flex {
-  width: 100%;
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: flex-start;
-}
+/*.flex {*/
+  /*width: 100%;*/
+  /*display: flex;*/
+  /*flex-flow: row wrap;*/
+  /*justify-content: flex-start;*/
+/*}*/
 
 .todo-list {
-  width: 100%;
+  /*width:100%;*/
+  /*height:100%;*/
+  /*display: inline-block;*/
+  margin: 20px;
+}
+.favorite {
+  background: yellow;
 }
